# MeshOperations

./: CMakeLists.txt  LICENSE  MeshOperations.cpp  MeshOperations.h  README.md
src/: MathUtility.h  Mesh.cpp  Mesh.h  MeshUtility.cpp  MeshUtility.h  Vec3.h
